# tweaky

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
test/: CMakeLists.txt  tweaky_test.cpp
tweaky/: CMakeLists.txt
tweaky/include/tweaky/: data.hpp  data_io.hpp  database.hpp  inspector.hpp  name.hpp  value.hpp
tweaky/src/: database.cpp
whackx/: CMakeLists.txt  main.cpp
whackx/whackx/: app.cpp  app.hpp  defines.hpp  game.cpp  game.hpp  io.cpp  io.hpp
